--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
 </head>
 <body>
     <header>
-        <h1>How to understand position in CSS</h1>
+        
     </header>
     <main>
+        <div class="page-title">
+            <h1>How to understand position in CSS</h1>
+        </div>
         <div class="explanation-position">
             <p>To position your box, you need to understand at least "position: absolute" and "position: relative"</p>
         </div>
         <section class="item-a-r">
-            <p class="box-name">DIV</p>
+            <p class="box-name main-name">DIV</p>
             <div class="box left">
-                <p class="box-name">DIV</p>
+                <p class="box-name left-name">DIV</p>
                 <div class="box left-content">
                     <p class="box-name">DIV</p>
+                </div>
+            </div>
+            <div class="box right">
+                <p class="box-name right">DIV</p>
+                <div class="box right-content">
+                    <p class="box-name right">DIV</p>
                 </div>
             </div>
         </section>
