Organizing the first topic and add new concepts

--- a/index.html
+++ b/index.html
@@ -21,7 +21,21 @@
             <h1>How to understand position in CSS</h1>
         </div>
         <div class="explanation-position">
-            <p>To position your box, you need to understand at least "position: absolute" and "position: relative"</p>
+            <p>In this example, we will use three boxes: (Or more =D)</p>
+        </div>
+        <section class="first-disclaimer">
+            <div class="first-disclaimer-father">
+                <p class="title">FATHER</p>
+            </div>
+            <div class="first-disclaimer first-child">
+                <p class="title">FIRST CHILD</p>
+            </div>
+            <div class="first-disclaimer second-child">
+                <p class="second title">SECOND CHILD</p>
+            </div>
+        </section>
+        <div class="explanation-position">
+            <p>TAG father always need to have position relative, because absolute father will find the next father relative, if you don't put this attribute, your block will go to top of the page.</p>
         </div>
         <section class="item-a-r">
             <p class="box-name main-name">DIV</p>
