Adding first explanation about position relative and absolute in the first block.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
             <h1>How to understand position in CSS</h1>
         </div>
         <div class="explanation-position">
-            <p>In this example, we will use three boxes: (Or more =D)</p>
+            <p>In this example, we will use three boxes. (Or more =D)</p>
+            <p>Two simple things to understand are: </p>
+            <div class="code">
+                <div class="code-father">
+                    <p class="code-css">position: absolute;</p>
+                    <p class="code-css">position: relative;</p>
+                </div>
+            </div>            
         </div>
         <section class="first-disclaimer">
             <div class="first-disclaimer-father">
