Adding a simple footer and correct position to name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="second title">SECOND CHILD</p>
             </div>
         </section>
-        <div class="explanation-position">
+        <div class="explanation-position2">
             <p>TAG father always need to have position relative, because absolute father will find the next father relative, if you don't put this attribute, your block will go to top of the page.</p>
         </div>
         <section class="item-a-r">
@@ -59,6 +59,12 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <div>
+                <a href="https://github.com/gustavodahora">Gustavo da Hora</a>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
