Adding a github img link in the header, and title to author

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
     <header>
-        
+        <div>
+            <a href="https://github.com/gustavodahora" title="Github - Gustavo da Hora"><img src="img/github.svg" alt="Github icon"></a>
+        </div>
     </header>
     <main>
         <div class="page-title">
@@ -48,7 +50,7 @@
     </main>
     <footer>
         <div>
-            <a href="https://github.com/gustavodahora">Gustavo da Hora</a>
+            <a href="https://github.com/gustavodahora" title="Author - Gustavo da Hora" alt="Author - Gustavo da Hora">Gustavo da Hora</a>
         </div>
     </footer>
 </body>
