Adding the text of the explanation of positio of the absolute element.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <main>
-        <div class="page-title">
+        <div class="title-master">
             <h1>How to understand position in CSS</h1>
         </div>
         <div class="explanation-position">
@@ -81,6 +81,23 @@
                         <p>    height: 50px;</p>
                     <p>}</p>
                 </div>
+            </div>
+            <div class="title-master">
+                <h2>How position the absolute elements?</h2>
+            </div>
+            <div class="explanation-position">
+                <p>You can have many ways to position using "position: absolute;", but the way I use it is through basic CSS positioning:</p>
+                <div class="code">
+                    <div class="code-father">
+                        <p>right: 0;</p>
+                        <p>left: 0;</p>
+                        <p>top: 0;</p>
+                        <p>bottom: 0;</p>
+                    </div>
+                </div>
+                <p>The value of the element in the browser in standart is: 0 for all the elements.</p>
+                <p>You can set across all units of measurement of CSS.</p>
+                <p>Use right: 50% to set your absolute element to center of the relative father. See the example:</p>
             </div>
     </main>
     <footer>
