Adding box of the explanation position element.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,23 @@
                 <p>You can set across all units of measurement of CSS.</p>
                 <p>Use right: 50% to set your absolute element to center of the relative father. See the example:</p>
             </div>
+            <div class="main-father">
+                <p class="main-name">Relative Father</p>
+                <div class="code code-absolute">
+                    <div class="code-father small">
+                        <p class="main-name text">position: relative;</p>
+                    </div>
+                </div>
+                <div class="main-child right">
+                    <p class="main-name">Absolute</p>
+                    <div class="code">
+                        <div class="code-father small">
+                            <p class="main-name text">position: absolute;</p>
+                            <p class="main-name text">right: 0;</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
         <div>
